--- a/files/style.css
+++ b/files/style.css
@@ -57,6 +57,10 @@
     font-size: 10px;
 }
 #webmap {
-    height: 200px;
-    float: right;
+    height: 400px;
+    width: 100%;
+    background: transparent;
+    border-style: solid;
+    border-width: 2px;
+    border-color: white;
 }
