affected why you copypaste so much

--- a/files/style.css
+++ b/files/style.css
@@ -1,4 +1,4 @@
-/* Items put here are extras from the CDN CSS (Materialize) */
+/* Items put here are extras from the CDN CSS (Bootstrap) */
 /* PARALLAX */
 @keyframes animateBackground {
     from {
